# PyMeshGen

./: .gitignore  .gitmodules  BOWYER_WATSON_JSON_USAGE.md  BOWYER_WATSON_REFACTORING.md  BUG.md  MANIFEST.in  PYMESHGEN_GUI_FIX_SUMMARY.md  PyMeshGen.iss  PyMeshGen.py  PyMeshGen.spec  PyMeshGen_mixed.py  README.md  README_PACKAGING.md  README_zh.md  Readme  TODO.md  VTK_IMPORT_FIX_SUMMARY.md  VTK_IMPORT_STATUS.md  __init__.py  boundary_mesh_sample.py  build.bat  build.py  build_app.py  comprehensive_test.py  core.py  debug_array_indexing.py  debug_complete_flow.py  debug_data_converter.py  debug_gui_scenario.py  debug_imports.py  debug_isinstance.py  debug_node_element.py  debug_pymeshgen.py  find_adjacent_faces.py  generate_test_output.py  get_march_vector.py  grid_sample.py  mesh_visualization.py  model_train.py  model_validation.py  (+42 more)
.github/: copilot-instructions.md
adfront2/: __init__.py  adfront2.py  adfront2_hybrid.py  adlayers2.py  multi_direction.py
backup_tests/: backup_start_gui_pyqt.py  backup_test_gui_message.py  backup_test_message_output.py  check_layout.py  generate_test_output.py  send_test_message.py  test_cas_import_display.py  test_gui.py  test_gui_app.py  test_gui_cas_display.py  test_gui_properties.py  test_message_output.py  test_properties_panel_standalone.py  test_vtk_complete.py  test_vtk_display_comprehensive.py  test_vtk_embedding_main.py  test_vtk_opengl_detailed.py
bugfix/: CAS_DISPLAY_FIX_SUMMARY.md  CAS_DISPLAY_GUI_FIX_SUMMARY.md  IMPORT_CAS_FILE_FIX_REPORT.md  PROPERTIES_PANEL_FIX_SUMMARY.md  VTK_DISPLAY_FIX_SUMMARY.md  VTK_IMPORT_FIX_SUMMARY.md
config/:  naca0012_multi.json  30p30n.json  30p30n_4wall.json  30p30n_4wall_multi.json  30p30n_mixed.json  30p30n_multi.json  anw.json  anw_mixed.json  anw_multi.json  concav_match120.json  concav_match90.json  concave.json  convex-match.json  convex.json  convex_match.json  convex_match120.json  convex_match90.json  cylinder.json  cylinder_mixed.json  main.json  naca0012.json  naca0012_multi.json  pentagon.json  pentagon_mixed.json  quad.json  quad_quad.json  quad_quad_mixed.json  quad_quad_multi.json  rae2822.json  rae2822_multi.json  tmp.json
data_structure/: __init__.py  basic_elements.py  cgns_types.py  fluent_types.py  front2d.py  mesh_data.py  mesh_reconstruction.py  parameters.py  parts_manager.py  rtree_space.py  unstructured_grid.py  vtk_types.py
delaunay/: BEFORE_AFTER_COMPARISON.md  BOWYER_WATSON_COMPARISON_REPORT.md  BOWYER_WATSON_DESIGN.md  BOWYER_WATSON_DESIGN_REPORT.md  BOWYER_WATSON_GMSH_DESIGN.md  BOWYER_WATSON_REFACTORING.md  BW_CORE_REVIEW.md  IMPROVEMENTS_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  README_BOWYER_WATSON.md  REFACTORING_SUMMARY.md  __init__.py  _splitting.py  boundary.py  bowyer_watson.py  bw_cavity.py  bw_core.py  bw_core.py.bak  bw_core.py.original  bw_core_gmsh.py  bw_core_stable.py  bw_predicates.py  bw_types.py  bw_utils.py  cavity.py  core.py  helpers.py  mesh_generator.py  postprocess.py  predicates.py  triangle_backend.py  types.py  utils.py  validation.py
docs/: UserGuide.md  feature_descriptions.xlsx  前沿推进曲面四边形网格生成算法.md
dynamic/: fish_swim.py
examples/: airplane-bomb-2d.cas  quad-hybrid.cas  quad-hybrid.pw  quad-tri.pw  semisphere-hybrid.pw  semisphere-prism-tet.pw  semisphere-tet-pyramid.cas  semisphere-tetra.cas  semisphere-tetra.pw
fileIO/: __init__.py  analyze_cgns.py  geometry_io.py  mesh_to_plt.py  occ_loader.py  occ_to_vtk.py  read_cas.py  read_vtk.py  stl_io.py  tecplot_io.py  universal_cgns_reader.py  vtk_io.py
gui/: README.md  __init__.py  config_manager.py  create_icons.py  create_part_dialog.py  file_operations.py  geometry_create_dialog.py  geometry_delete_dialog.py  geometry_operations.py  geometry_picking.py  geometry_tree.py  global_params_dialog.py  gui_base.py  gui_main.py  gui_main_refactored.py  gui_new.py  help_module.py  icon_manager.py  import_thread.py  line_mesh_dialog.py  line_mesh_generation.py  mesh_display.py  mesh_generation_thread.py  mesh_operations.py  model_tree.py  part_manager.py  part_params_dialog.py  parts_panel_manager.py  region_creation_dialog.py  ribbon_widget.py  toolbar.py  ui_helpers.py  ui_utils.py  view_controller.py
meshes/: 30p30n.vtk  exported_config.json  tmp_mesh_opt.vtk
meshsize/: __init__.py  meshsize-bak.py  meshsize.py
(+221 files in other folders)
